fix overflow

--- a/Client/src/views/landingViews/howItWorks/howItWorks.module.scss
+++ b/Client/src/views/landingViews/howItWorks/howItWorks.module.scss
@@ -3,14 +3,14 @@
 }
 
 .layout {
-    width: 100%;
-    height: 100%;
+    width: 100% auto;
+    height: 100% auto;
     margin-bottom: 40%;
-
     display: grid;
+    // object-fit: contain;
     grid-template-rows: repeat(4, 240px);
     grid-template-columns: repeat(2, 1fr);
-    gap: 10% 0px;
+    gap: 5% 0px;
 }
 
 .steps {
@@ -19,13 +19,13 @@
     justify-content: center;
     width: 100%;
     height: 100%;
-    margin-top: 10%;
+    // margin-top: 10%;
 
     img {
         background-color: var(--secondary--color-light);
         width: 100%;
         height: 100%;
-        padding: 20px;
+        // padding: 20px;
         border-radius: 10%;
     }
 }
@@ -38,29 +38,37 @@
     box-shadow: 0px 30px 52px -25px var(--secondary--color-hover);
 
     h2 {
-        font-size: 200%;
+        font-size: 100%;
     }
 }
 
 .step {
-    padding-left: 5%;
-    margin-top: 10%;
-    position: relative;
-    height: 80%;
+    display: block;
+    // padding-left: 5%;
+    // margin-top: 10%;
+    // position: relative;
+    height: 80% auto;
+    max-height: 80%;
     border: black 1px solid;
     border-width: 0 0 0 4px;
-    width: 60%;
+    width: 80%;
     h3 {
         color: var(--accent--first--color-light);
     }
     p {
-        font-size: 120%;
+        font-size: 100%;
     }
 }
 
 .faqSection {
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+    max-width: 100%;
+    max-height: calc(100vh - 400px); /* Adjust as needed */
+    // overflow-y: auto;
     h2 {
-        font-size: 250%;
+        font-size: 3rem;
         display: flex;
         justify-content: center;
         background-color: var(--secondary--color-light);
@@ -72,12 +80,12 @@
 .faqItem {
     margin-top: 1%;
     padding: 2%;
-    font-size: 170%;
+    font-size: 2rem;
     border-bottom: var(--accent--first--color-light) 3px solid;
 }
 
 .faqAnswer {
-    font-size: 100%;
+    font-size: 90%;
     background-color: var(--secondary--color-light);
     width: 100%;
     height: 100%;
